--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,483 @@ body {
     font-family: 'Josefin Sans', sans-serif;
 }
 
+@keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #ffffff;
+    overflow: hidden;
+    z-index: -9999;
+}
+
+.background span {
+    width: 2vmin;
+    height: 2vmin;
+    border-radius: 2vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 40;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+.background span:nth-child(0) {
+    color: #1c3c4d;
+    top: 89%;
+    left: 76%;
+    animation-duration: 50s;
+    animation-delay: -68s;
+    transform-origin: -17vw -5vh;
+    box-shadow: -4vmin 0 0.5389495344070907vmin currentColor;
+}
+.background span:nth-child(1) {
+    color: #1c3c4d;
+    top: 57%;
+    left: 93%;
+    animation-duration: 10s;
+    animation-delay: -58s;
+    transform-origin: 20vw 22vh;
+    box-shadow: 4vmin 0 1.3615348118714952vmin currentColor;
+}
+.background span:nth-child(2) {
+    color: #1c3c4d;
+    top: 72%;
+    left: 75%;
+    animation-duration: 24s;
+    animation-delay: -18s;
+    transform-origin: 18vw 5vh;
+    box-shadow: 4vmin 0 1.41760893424505vmin currentColor;
+}
+.background span:nth-child(3) {
+    color: #1c3c4d;
+    top: 96%;
+    left: 90%;
+    animation-duration: 43s;
+    animation-delay: -60s;
+    transform-origin: -4vw -14vh;
+    box-shadow: -4vmin 0 1.0774644387835586vmin currentColor;
+}
+.background span:nth-child(4) {
+    color: #1c3c4d;
+    top: 2%;
+    left: 74%;
+    animation-duration: 20s;
+    animation-delay: -36s;
+    transform-origin: 16vw -3vh;
+    box-shadow: -4vmin 0 0.6834936791978885vmin currentColor;
+}
+.background span:nth-child(5) {
+    color: #1c3c4d;
+    top: 92%;
+    left: 59%;
+    animation-duration: 78s;
+    animation-delay: -21s;
+    transform-origin: 10vw -2vh;
+    box-shadow: 4vmin 0 0.8821549094053678vmin currentColor;
+}
+.background span:nth-child(6) {
+    color: #1c3c4d;
+    top: 4%;
+    left: 40%;
+    animation-duration: 54s;
+    animation-delay: -30s;
+    transform-origin: 19vw -8vh;
+    box-shadow: 4vmin 0 1.2218668694396182vmin currentColor;
+}
+.background span:nth-child(7) {
+    color: #1c3c4d;
+    top: 74%;
+    left: 23%;
+    animation-duration: 49s;
+    animation-delay: -45s;
+    transform-origin: 1vw 2vh;
+    box-shadow: 4vmin 0 1.0706729396012715vmin currentColor;
+}
+.background span:nth-child(8) {
+    color: #1c3c4d;
+    top: 4%;
+    left: 87%;
+    animation-duration: 53s;
+    animation-delay: -12s;
+    transform-origin: -7vw 6vh;
+    box-shadow: 4vmin 0 0.6811128748568758vmin currentColor;
+}
+.background span:nth-child(9) {
+    color: #1c3c4d;
+    top: 5%;
+    left: 87%;
+    animation-duration: 33s;
+    animation-delay: -36s;
+    transform-origin: 3vw -21vh;
+    box-shadow: -4vmin 0 0.7864079281775855vmin currentColor;
+}
+.background span:nth-child(10) {
+    color: #1c3c4d;
+    top: 35%;
+    left: 31%;
+    animation-duration: 28s;
+    animation-delay: -73s;
+    transform-origin: 20vw -6vh;
+    box-shadow: 4vmin 0 1.252900512660998vmin currentColor;
+}
+.background span:nth-child(11) {
+    color: #1c3c4d;
+    top: 90%;
+    left: 65%;
+    animation-duration: 102s;
+    animation-delay: -8s;
+    transform-origin: -17vw -22vh;
+    box-shadow: 4vmin 0 1.3202136723755185vmin currentColor;
+}
+.background span:nth-child(12) {
+    color: #1c3c4d;
+    top: 66%;
+    left: 10%;
+    animation-duration: 20s;
+    animation-delay: -28s;
+    transform-origin: -22vw 6vh;
+    box-shadow: -4vmin 0 0.6941411085119229vmin currentColor;
+}
+.background span:nth-child(13) {
+    color: #1c3c4d;
+    top: 11%;
+    left: 16%;
+    animation-duration: 61s;
+    animation-delay: -70s;
+    transform-origin: -18vw 8vh;
+    box-shadow: -4vmin 0 0.5106394938836993vmin currentColor;
+}
+.background span:nth-child(14) {
+    color: #1c3c4d;
+    top: 61%;
+    left: 2%;
+    animation-duration: 73s;
+    animation-delay: -82s;
+    transform-origin: 8vw 11vh;
+    box-shadow: -4vmin 0 0.9270105944437628vmin currentColor;
+}
+.background span:nth-child(15) {
+    color: #1c3c4d;
+    top: 77%;
+    left: 93%;
+    animation-duration: 12s;
+    animation-delay: -48s;
+    transform-origin: 4vw 23vh;
+    box-shadow: -4vmin 0 1.0396788037109137vmin currentColor;
+}
+.background span:nth-child(16) {
+    color: #1c3c4d;
+    top: 8%;
+    left: 81%;
+    animation-duration: 12s;
+    animation-delay: -18s;
+    transform-origin: 0vw 23vh;
+    box-shadow: 4vmin 0 0.5629618908559113vmin currentColor;
+}
+.background span:nth-child(17) {
+    color: #1c3c4d;
+    top: 35%;
+    left: 57%;
+    animation-duration: 45s;
+    animation-delay: -79s;
+    transform-origin: -7vw 17vh;
+    box-shadow: 4vmin 0 0.9057837619697422vmin currentColor;
+}
+.background span:nth-child(18) {
+    color: #1c3c4d;
+    top: 14%;
+    left: 23%;
+    animation-duration: 84s;
+    animation-delay: -19s;
+    transform-origin: 9vw -15vh;
+    box-shadow: 4vmin 0 1.3326328181262934vmin currentColor;
+}
+.background span:nth-child(19) {
+    color: #1c3c4d;
+    top: 7%;
+    left: 8%;
+    animation-duration: 25s;
+    animation-delay: -54s;
+    transform-origin: 17vw 9vh;
+    box-shadow: 4vmin 0 1.4368491850749554vmin currentColor;
+}
+.background span:nth-child(20) {
+    color: #1c3c4d;
+    top: 79%;
+    left: 82%;
+    animation-duration: 88s;
+    animation-delay: -36s;
+    transform-origin: -4vw 21vh;
+    box-shadow: -4vmin 0 0.7936851732787737vmin currentColor;
+}
+.background span:nth-child(21) {
+    color: #1c3c4d;
+    top: 42%;
+    left: 39%;
+    animation-duration: 21s;
+    animation-delay: -1s;
+    transform-origin: -6vw -14vh;
+    box-shadow: 4vmin 0 0.6317323796929468vmin currentColor;
+}
+.background span:nth-child(22) {
+    color: #1c3c4d;
+    top: 12%;
+    left: 13%;
+    animation-duration: 24s;
+    animation-delay: -60s;
+    transform-origin: 11vw 3vh;
+    box-shadow: 4vmin 0 1.3646191209987253vmin currentColor;
+}
+.background span:nth-child(23) {
+    color: #1c3c4d;
+    top: 5%;
+    left: 43%;
+    animation-duration: 91s;
+    animation-delay: -27s;
+    transform-origin: -1vw -21vh;
+    box-shadow: -4vmin 0 0.6620313250521772vmin currentColor;
+}
+.background span:nth-child(24) {
+    color: #1c3c4d;
+    top: 14%;
+    left: 28%;
+    animation-duration: 27s;
+    animation-delay: -79s;
+    transform-origin: -16vw 23vh;
+    box-shadow: -4vmin 0 1.1323100920983948vmin currentColor;
+}
+.background span:nth-child(25) {
+    color: #1c3c4d;
+    top: 45%;
+    left: 77%;
+    animation-duration: 94s;
+    animation-delay: -29s;
+    transform-origin: 13vw -10vh;
+    box-shadow: 4vmin 0 1.1368041238326887vmin currentColor;
+}
+.background span:nth-child(26) {
+    color: #1c3c4d;
+    top: 28%;
+    left: 75%;
+    animation-duration: 46s;
+    animation-delay: -63s;
+    transform-origin: 16vw -20vh;
+    box-shadow: 4vmin 0 1.1408416491197009vmin currentColor;
+}
+.background span:nth-child(27) {
+    color: #1c3c4d;
+    top: 16%;
+    left: 18%;
+    animation-duration: 97s;
+    animation-delay: -88s;
+    transform-origin: 16vw 21vh;
+    box-shadow: -4vmin 0 1.2414431102294576vmin currentColor;
+}
+.background span:nth-child(28) {
+    color: #1c3c4d;
+    top: 75%;
+    left: 17%;
+    animation-duration: 11s;
+    animation-delay: -57s;
+    transform-origin: -12vw -7vh;
+    box-shadow: -4vmin 0 1.3199602037150953vmin currentColor;
+}
+.background span:nth-child(29) {
+    color: #1c3c4d;
+    top: 91%;
+    left: 68%;
+    animation-duration: 64s;
+    animation-delay: -5s;
+    transform-origin: -4vw 7vh;
+    box-shadow: -4vmin 0 1.3862081968284683vmin currentColor;
+}
+.background span:nth-child(30) {
+    color: #1c3c4d;
+    top: 45%;
+    left: 15%;
+    animation-duration: 96s;
+    animation-delay: -37s;
+    transform-origin: 25vw 2vh;
+    box-shadow: 4vmin 0 0.5314400744198395vmin currentColor;
+}
+.background span:nth-child(31) {
+    color: #1c3c4d;
+    top: 77%;
+    left: 97%;
+    animation-duration: 8s;
+    animation-delay: -14s;
+    transform-origin: 10vw -18vh;
+    box-shadow: 4vmin 0 0.7850856511957762vmin currentColor;
+}
+.background span:nth-child(32) {
+    color: #1c3c4d;
+    top: 54%;
+    left: 84%;
+    animation-duration: 57s;
+    animation-delay: -100s;
+    transform-origin: -20vw 25vh;
+    box-shadow: -4vmin 0 0.7407662672741626vmin currentColor;
+}
+.background span:nth-child(33) {
+    color: #1c3c4d;
+    top: 77%;
+    left: 71%;
+    animation-duration: 27s;
+    animation-delay: -74s;
+    transform-origin: 19vw -19vh;
+    box-shadow: 4vmin 0 1.4192597945448662vmin currentColor;
+}
+.background span:nth-child(34) {
+    color: #1c3c4d;
+    top: 27%;
+    left: 78%;
+    animation-duration: 37s;
+    animation-delay: -12s;
+    transform-origin: 19vw -11vh;
+    box-shadow: 4vmin 0 1.235350983307956vmin currentColor;
+}
+.background span:nth-child(35) {
+    color: #1c3c4d;
+    top: 34%;
+    left: 91%;
+    animation-duration: 49s;
+    animation-delay: -77s;
+    transform-origin: -22vw -13vh;
+    box-shadow: 4vmin 0 1.4958256228023492vmin currentColor;
+}
+.background span:nth-child(36) {
+    color: #1c3c4d;
+    top: 29%;
+    left: 68%;
+    animation-duration: 73s;
+    animation-delay: -68s;
+    transform-origin: 24vw -13vh;
+    box-shadow: -4vmin 0 0.8524049046335314vmin currentColor;
+}
+.background span:nth-child(37) {
+    color: #1c3c4d;
+    top: 91%;
+    left: 48%;
+    animation-duration: 58s;
+    animation-delay: -26s;
+    transform-origin: 3vw 2vh;
+    box-shadow: -4vmin 0 0.9946289606843373vmin currentColor;
+}
+.background span:nth-child(38) {
+    color: #1c3c4d;
+    top: 58%;
+    left: 48%;
+    animation-duration: 22s;
+    animation-delay: -95s;
+    transform-origin: 14vw -2vh;
+    box-shadow: 4vmin 0 1.3697355283022121vmin currentColor;
+}
+.background span:nth-child(39) {
+    color: #1c3c4d;
+    top: 18%;
+    left: 32%;
+    animation-duration: 73s;
+    animation-delay: -95s;
+    transform-origin: -11vw 9vh;
+    box-shadow: -4vmin 0 0.7800405830417443vmin currentColor;
+}
+.background span:nth-child(40) {
+    color: #1c3c4d;
+    top: 73%;
+    left: 37%;
+    animation-duration: 94s;
+    animation-delay: -44s;
+    transform-origin: 5vw -4vh;
+    box-shadow: 4vmin 0 0.9264647504139727vmin currentColor;
+}
+.background span:nth-child(41) {
+    color: #1c3c4d;
+    top: 20%;
+    left: 53%;
+    animation-duration: 26s;
+    animation-delay: -75s;
+    transform-origin: -12vw 19vh;
+    box-shadow: 4vmin 0 1.0624628146756314vmin currentColor;
+}
+.background span:nth-child(42) {
+    color: #1c3c4d;
+    top: 17%;
+    left: 93%;
+    animation-duration: 22s;
+    animation-delay: -2s;
+    transform-origin: 7vw 12vh;
+    box-shadow: -4vmin 0 1.1167117983785864vmin currentColor;
+}
+.background span:nth-child(43) {
+    color: #1c3c4d;
+    top: 83%;
+    left: 26%;
+    animation-duration: 22s;
+    animation-delay: -94s;
+    transform-origin: -23vw -15vh;
+    box-shadow: -4vmin 0 1.2039125699181275vmin currentColor;
+}
+.background span:nth-child(44) {
+    color: #1c3c4d;
+    top: 34%;
+    left: 96%;
+    animation-duration: 85s;
+    animation-delay: -8s;
+    transform-origin: 12vw 16vh;
+    box-shadow: -4vmin 0 0.7697474019773816vmin currentColor;
+}
+.background span:nth-child(45) {
+    color: #1c3c4d;
+    top: 15%;
+    left: 12%;
+    animation-duration: 52s;
+    animation-delay: -69s;
+    transform-origin: -9vw 2vh;
+    box-shadow: -4vmin 0 1.21968942044073vmin currentColor;
+}
+.background span:nth-child(46) {
+    color: #1c3c4d;
+    top: 89%;
+    left: 39%;
+    animation-duration: 31s;
+    animation-delay: -67s;
+    transform-origin: 18vw 13vh;
+    box-shadow: -4vmin 0 1.2372395571232808vmin currentColor;
+}
+.background span:nth-child(47) {
+    color: #1c3c4d;
+    top: 11%;
+    left: 73%;
+    animation-duration: 67s;
+    animation-delay: -34s;
+    transform-origin: 8vw 6vh;
+    box-shadow: 4vmin 0 1.3779524381815638vmin currentColor;
+}
+.background span:nth-child(48) {
+    color: #1c3c4d;
+    top: 7%;
+    left: 87%;
+    animation-duration: 38s;
+    animation-delay: -55s;
+    transform-origin: -9vw 24vh;
+    box-shadow: -4vmin 0 1.4345794137382917vmin currentColor;
+}
+.background span:nth-child(49) {
+    color: #1c3c4d;
+    top: 7%;
+    left: 88%;
+    animation-duration: 20s;
+    animation-delay: -86s;
+    transform-origin: 1vw -13vh;
+    box-shadow: 4vmin 0 1.200971967376569vmin currentColor;
+}
